[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payment-claim-detector"
version = "0.1.0"
description = "Multi-state workers' compensation payment analysis tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"
readme = "README.md"

[project.scripts]
payment-claim-detector = "payment_claim_detector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"